# simple-ai-whisperx-gui

./: .gitignore  .rustfmt.toml  CHANGELOG.md  LICENSE  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: LLMView.tsx  SettingsView.tsx  SpeakerIdView.tsx  TranscriptionView.tsx
src/lib/: store.ts
