[package]
name = "simple-ai-whisperx-gui"
version = "0.1.0"
description = "Simple AI transcription and summary GUI for WhisperX"
authors = ["skalu"]
edition = "2021"

[lib]
name = "whisperx_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["process", "io-util"] }
base64 = "0.22"

